Add copy and copy constructors (pt. 1)